export class Storage {
    id! : number;
    number! : number;
    unit! : string
}